[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/level/editor/TileMapBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/level/editor/TileMapDeath.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/level/editor/DeathZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/level/editor/DeathWindmill.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 91.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 107.5, 10 )

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 90.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 87, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 7 )

[node name="DeathWindmill" type="Node2D"]
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -786433, 1, 3, -720897, 1, 327680, -786432, 1, 2, -655361, 1, 65536, -720896, 1, 65538, -589825, 1, 65536, -655360, 1, 65538, -524289, 1, 65536, -589824, 1, 65538, -458753, 1, 65536, -524288, 1, 65538, -393217, 1, 65536, -458752, 1, 65538, -327681, 1, 65536, -393216, 1, 65538, -262145, 1, 65536, -327680, 1, 65538, -196609, 1, 65536, -262144, 1, 65538, -131073, 1, 65536, -196608, 1, 65538, -65538, 1, 0, -65537, 1, 65541, -131072, 1, 65540, -131071, 1, 2, -12, 1, 0, -11, 1, 1, -10, 1, 1, -9, 1, 1, -8, 1, 1, -7, 1, 1, -6, 1, 1, -5, 1, 1, -4, 1, 1, -3, 1, 1, -2, 1, 65541, -1, 1, 65537, -65536, 1, 65537, -65535, 1, 65540, -65534, 1, 1, -65533, 1, 1, -65532, 1, 1, -65531, 1, 1, -65530, 1, 1, -65529, 1, 1, -65528, 1, 1, -65527, 1, 1, -65526, 1, 1, -65525, 1, 262146, -65524, 1, 196610, 65523, 1, 196608, 65524, 1, 327683, 65525, 1, 131073, 65526, 1, 131073, 65527, 1, 131073, 65528, 1, 131073, 65529, 1, 131073, 65530, 1, 131073, 65531, 1, 131073, 65532, 1, 131073, 65533, 1, 131073, 65534, 1, 5, 65535, 1, 65537, 0, 1, 65537, 1, 1, 4, 2, 1, 131073, 3, 1, 131073, 4, 1, 131073, 5, 1, 131073, 6, 1, 131073, 7, 1, 131073, 8, 1, 131073, 9, 1, 131073, 10, 1, 131073, 11, 1, 131074, 131070, 1, 131072, 131071, 1, 5, 65536, 1, 4, 65537, 1, 131074, 196607, 1, 65536, 131072, 1, 65538, 262143, 1, 65536, 196608, 1, 65538, 327679, 1, 65536, 262144, 1, 65538, 393215, 1, 65536, 327680, 1, 65538, 458751, 1, 65536, 393216, 1, 65538, 524287, 1, 65536, 458752, 1, 65538, 589823, 1, 65536, 524288, 1, 65538, 655359, 1, 65536, 589824, 1, 65538, 720895, 1, 65536, 655360, 1, 65538, 786431, 1, 131072, 720896, 1, 262145, 786432, 1, 131075 )

[node name="BladesFront" type="Node2D" parent="."]

[node name="DeathZone" parent="BladesFront" instance=ExtResource( 3 )]
position = Vector2( 437, 413 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BladesFront/DeathZone"]
position = Vector2( -417, -511.25 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BladesFront/DeathZone"]
position = Vector2( -458, -311 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BladesFront/DeathZone"]
position = Vector2( -519, -432 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BladesFront/DeathZone"]
position = Vector2( -355, -393 )
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="BladesFront/DeathZone"]
position = Vector2( -634, -417 )
shape = SubResource( 3 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="BladesFront/DeathZone"]
position = Vector2( -240, -409 )
shape = SubResource( 3 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="BladesFront/DeathZone"]
position = Vector2( -440, -217 )
shape = SubResource( 3 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="BladesFront/DeathZone"]
position = Vector2( -430, -609 )
shape = SubResource( 3 )

[node name="TileMapDeath" parent="BladesFront" instance=ExtResource( 2 )]
tile_data = PoolIntArray( -1703936, 2, 0, -1638400, 2, 0, -1572862, 2, 0, -1507326, 2, 0, -1441790, 2, 0, -1376254, 2, 0, -1310718, 2, 0, -1245182, 2, 0, -1179646, 2, 0, -1114110, 2, 0, -1048574, 2, 0, -983038, 2, 0, -917502, 2, 0, -851966, 2, 0, -786430, 2, 0, -720894, 2, 0, -655358, 2, 0, -589822, 2, 0, -524286, 2, 0, -458750, 2, 0, -393214, 2, 0, -327678, 2, 0, -196632, 3, 0, -196631, 3, 0, -196630, 3, 0, -196629, 3, 0, -196628, 3, 0, -196627, 3, 0, -196626, 3, 0, -196625, 3, 0, -196624, 3, 0, -196623, 3, 0, -196622, 3, 0, -196621, 3, 0, -196620, 3, 0, -196619, 3, 0, -196618, 3, 0, -196617, 3, 0, -196616, 3, 0, -196615, 3, 0, -196614, 3, 0, -196613, 3, 0, -131089, 3, 0, -65562, 3, 0, -65561, 3, 0, 24, 0, 0, 25, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 327676, 1, 0, 393212, 1, 0, 458748, 1, 0, 524284, 1, 0, 589820, 1, 0, 655356, 1, 0, 720892, 1, 0, 786428, 1, 0, 851964, 1, 0, 917500, 1, 0, 983036, 1, 0, 1048572, 1, 0, 1114108, 1, 0, 1179644, 1, 0, 1245180, 1, 0, 1310716, 1, 0, 1376252, 1, 0, 1441788, 1, 0, 1507324, 1, 0, 1572860, 1, 0, 1638398, 1, 0, 1703934, 1, 0 )

[node name="TileMapDeathHL" parent="BladesFront" instance=ExtResource( 2 )]
tile_data = PoolIntArray( -1703936, 6, 0, -1638400, 6, 0, -1572862, 6, 0, -1507326, 6, 0, -1441790, 6, 0, -1376254, 6, 0, -1310718, 6, 0, -1245182, 6, 0, -1179646, 6, 0, -1114110, 6, 0, -1048574, 6, 0, -983038, 6, 0, -917502, 6, 0, -851966, 6, 0, -786430, 6, 0, -720894, 6, 0, -655358, 6, 0, -589822, 6, 0, -524286, 6, 0, -458750, 6, 0, -393214, 6, 0, -327678, 6, 0, -196632, 7, 0, -196631, 7, 0, -196630, 7, 0, -196629, 7, 0, -196628, 7, 0, -196627, 7, 0, -196626, 7, 0, -196625, 7, 0, -196624, 7, 0, -196623, 7, 0, -196622, 7, 0, -196621, 7, 0, -196620, 7, 0, -196619, 7, 0, -196618, 7, 0, -196617, 7, 0, -196616, 7, 0, -196615, 7, 0, -196614, 7, 0, -196613, 7, 0, -131089, 7, 0, -65562, 7, 0, -65561, 7, 0, 24, 4, 0, 25, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131090, 4, 0, 131091, 4, 0, 131092, 4, 0, 131093, 4, 0, 131094, 4, 0, 131095, 4, 0, 327676, 5, 0, 393212, 5, 0, 458748, 5, 0, 524284, 5, 0, 589820, 5, 0, 655356, 5, 0, 720892, 5, 0, 786428, 5, 0, 851964, 5, 0, 917500, 5, 0, 983036, 5, 0, 1048572, 5, 0, 1114108, 5, 0, 1179644, 5, 0, 1245180, 5, 0, 1310716, 5, 0, 1376252, 5, 0, 1441788, 5, 0, 1507324, 5, 0, 1572860, 5, 0, 1638398, 5, 0, 1703934, 5, 0 )

[node name="BladesBack" type="Node2D" parent="."]

[node name="DeathZone" parent="BladesBack" instance=ExtResource( 3 )]
position = Vector2( 437, 413 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BladesBack/DeathZone"]
position = Vector2( -415, -298 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BladesBack/DeathZone"]
position = Vector2( -456, -529.5 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BladesBack/DeathZone"]
position = Vector2( -319, -433 )
shape = SubResource( 5 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BladesBack/DeathZone"]
position = Vector2( -554, -392 )
shape = SubResource( 5 )

[node name="TileMapDeath" parent="BladesBack" instance=ExtResource( 2 )]
tile_data = PoolIntArray( -1638404, 1, 0, -1572868, 1, 0, -1507332, 1, 0, -1441796, 1, 0, -1376260, 1, 0, -1310724, 1, 0, -1245188, 1, 0, -1179652, 1, 0, -1114116, 1, 0, -1048580, 1, 0, -983044, 1, 0, -917508, 1, 0, -851972, 1, 0, -786436, 1, 0, -720900, 1, 0, -655364, 1, 0, -589828, 1, 0, -524292, 1, 0, -458756, 1, 0, -393220, 1, 0, -327684, 1, 0, -262148, 1, 0, -262140, 3, 0, -262139, 3, 0, -262138, 3, 0, -262137, 3, 0, -262136, 3, 0, -262135, 3, 0, -262134, 3, 0, -262133, 3, 0, -262132, 3, 0, -262131, 3, 0, -262130, 3, 0, -262129, 3, 0, -262128, 3, 0, -262127, 3, 0, -262126, 3, 0, -262125, 3, 0, -262124, 3, 0, -262123, 3, 0, -262122, 3, 0, -262121, 3, 0, -262120, 3, 0, -262119, 3, 0, -196603, 3, 0, 196582, 0, 0, 196583, 0, 0, 196584, 0, 0, 196585, 0, 0, 196586, 0, 0, 196587, 0, 0, 196588, 0, 0, 196589, 0, 0, 196590, 0, 0, 196591, 0, 0, 196592, 0, 0, 196593, 0, 0, 196594, 0, 0, 196595, 0, 0, 196596, 0, 0, 196597, 0, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 262146, 2, 0, 327682, 2, 0, 393218, 2, 0, 458754, 2, 0, 524290, 2, 0, 589826, 2, 0, 655362, 2, 0, 720898, 2, 0, 786434, 2, 0, 851970, 2, 0, 917506, 2, 0, 983042, 2, 0, 1048578, 2, 0, 1114114, 2, 0, 1179650, 2, 0, 1245186, 2, 0, 1310722, 2, 0, 1376258, 2, 0, 1441794, 2, 0, 1507330, 2, 0, 1572866, 2, 0, 1638402, 2, 0 )

[node name="TileMapDeathHL" parent="BladesBack" instance=ExtResource( 2 )]
tile_data = PoolIntArray( -1638404, 5, 0, -1572868, 5, 0, -1507332, 5, 0, -1441796, 5, 0, -1376260, 5, 0, -1310724, 5, 0, -1245188, 5, 0, -1179652, 5, 0, -1114116, 5, 0, -1048580, 5, 0, -983044, 5, 0, -917508, 5, 0, -851972, 5, 0, -786436, 5, 0, -720900, 5, 0, -655364, 5, 0, -589828, 5, 0, -524292, 5, 0, -458756, 5, 0, -393220, 5, 0, -327684, 5, 0, -262148, 5, 0, -262140, 7, 0, -262139, 7, 0, -262138, 7, 0, -262137, 7, 0, -262136, 7, 0, -262135, 7, 0, -262134, 7, 0, -262133, 7, 0, -262132, 7, 0, -262131, 7, 0, -262130, 7, 0, -262129, 7, 0, -262128, 7, 0, -262127, 7, 0, -262126, 7, 0, -262125, 7, 0, -262124, 7, 0, -262123, 7, 0, -262122, 7, 0, -262121, 7, 0, -262120, 7, 0, -262119, 7, 0, -196603, 7, 0, 196582, 4, 0, 196583, 4, 0, 196584, 4, 0, 196585, 4, 0, 196586, 4, 0, 196587, 4, 0, 196588, 4, 0, 196589, 4, 0, 196590, 4, 0, 196591, 4, 0, 196592, 4, 0, 196593, 4, 0, 196594, 4, 0, 196595, 4, 0, 196596, 4, 0, 196597, 4, 0, 196598, 4, 0, 196599, 4, 0, 196600, 4, 0, 196601, 4, 0, 196602, 4, 0, 196603, 4, 0, 262146, 6, 0, 327682, 6, 0, 393218, 6, 0, 458754, 6, 0, 524290, 6, 0, 589826, 6, 0, 655362, 6, 0, 720898, 6, 0, 786434, 6, 0, 851970, 6, 0, 917506, 6, 0, 983042, 6, 0, 1048578, 6, 0, 1114114, 6, 0, 1179650, 6, 0, 1245186, 6, 0, 1310722, 6, 0, 1376258, 6, 0, 1441794, 6, 0, 1507330, 6, 0, 1572866, 6, 0, 1638402, 6, 0 )

[node name="BladesTop" type="Node2D" parent="."]

[node name="DeathZone" parent="BladesTop" instance=ExtResource( 3 )]
position = Vector2( 437, 413 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BladesTop/DeathZone"]
position = Vector2( -429, -197 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BladesTop/DeathZone"]
position = Vector2( -652, -405 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BladesTop/DeathZone"]
position = Vector2( -222, -421 )
shape = SubResource( 6 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BladesTop/DeathZone"]
position = Vector2( -445, -629 )
shape = SubResource( 6 )

[node name="TileMapDeath" parent="BladesTop" instance=ExtResource( 2 )]
tile_data = PoolIntArray( -1769474, 3, 0, -1769473, 3, 0, -131046, 2, 0, -65510, 2, 0, 65508, 1, 0, 131044, 1, 0, 1703936, 0, 0, 1703937, 0, 0 )

[node name="TileMapDeathHL" parent="BladesTop" instance=ExtResource( 2 )]
tile_data = PoolIntArray( -1769474, 7, 0, -1769473, 7, 0, -131046, 6, 0, -65510, 6, 0, 65508, 5, 0, 131044, 5, 0, 1703936, 4, 0, 1703937, 4, 0 )

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
